Fix issue of OR not showing up on login page on Chrome

--- a/rates/static/rates/css/social.css
+++ b/rates/static/rates/css/social.css
@@ -20,6 +20,7 @@
 }
 
 hr {
+    overflow: visible;
     text-align: center;
     margin: auto;
     width: 70%;
@@ -31,5 +32,5 @@ hr {
     content: 'OR';
     padding: 0 4px;
     position: relative;
-    top: -13px;
+    top: -12px;
 }
